--- a/css/main.css
+++ b/css/main.css
@@ -80,7 +80,7 @@ header .inner nav ul {
 header .inner nav ul li {
     font-size: 18px;
     padding: 5px 10px;
-    background-color: #e6e6e6;
+    background-color: #fff;
     border-radius: 20px;
     margin-left: 5px;
 }
